--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ logo:             images/logo.png # logo visible in the topbar
 # When testing locally leave blank or use http://localhost:4000
 
 url: http://godsme.github.io
+#url:
 
 # draw your top menu here
 # each item must have a title and a url.
