--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,43 @@
-# Setup
-name:         Darwin Yuan
-tagline:      A responsive theme for your project on GitHub Pages
-baseurl:      ""
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Gems
-gems:
-  - jekyll-paginate
+# Site settings
+title: 一个老程序员的思考片段
+author: 袁英杰
+author_link: https://godsme.github.io
+author_description: 程序员，技术咨询师。长期关注与软件开发效率的方方面面。
+email: darwin_yuan@hotmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://godsme.github.io" # the base hostname & protocol for your site
 
-#Others
+# Picturefill
+# A responsive image polyfill: http://scottjehl.github.io/picturefill/
+picturefill: false
+
+# Typography
+# To use, publish a kit and enter the ID here. If you do not wish to use Typekit,
+# leave this ID blank
+typekit_kit_id: kwf5dox
+
+# Build settings
+gems: [jekyll-paginate]
 markdown: kramdown
+permalink: pretty
+
+kramdown:
+  input: GFM
+
+# Pagination
+paginate: 5
+
+# Sass
+sass:
+    style: :compressed
