--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 一个老程序员的思考片段
+title: 
 author: 袁英杰
 author_link: https://godsme.github.io
 author_description: 程序员，技术咨询师。长期关注与软件开发效率的方方面面。
